Added JavaScript to enable interaction with buttons and sliders

--- a/style.css
+++ b/style.css
@@ -2,6 +2,23 @@
   --accent: #294eca;
 }
 
+@font-face {
+  font-family: 'Inter var';
+  font-weight: 100 900;
+  font-display: block;
+  font-style: normal;
+  font-named-instance: 'Regular';
+  src: url("/font/Inter.var.woff2?v=3.13") format("woff2");
+}
+@font-face {
+  font-family: 'Inter var';
+  font-weight: 100 900;
+  font-display: block;
+  font-style: italic;
+  font-named-instance: 'Italic';
+  src: url("/font/Inter.var.woff2?v=3.13") format("woff2");
+}
+
 body {
   margin: 0;
   box-sizing: border-box;
@@ -76,12 +93,21 @@ a {
   overflow-y: auto;
 }
 
+.controls-section {
+  opacity: 0.5;
+  transition: opacity .2s;
+}
+
+.controls-section:hover {
+  opacity: 1;
+}
+
 h1, h2, h3, p {
   margin: 0;
 }
 
-h2, h3 {
-  margin: 25px 0 0 0;
+h3 {
+  margin: 15px 0 0 0;
 }
 
 p.subtitle {
@@ -92,6 +118,18 @@ p.subtitle {
 
 .no-top-margin {
   margin-top: 0;
+}
+
+hr {
+  margin: 30px 20px 20px 20px;
+  border: solid 1px #333;
+}
+
+button {
+  padding: 5px 10px;
+  border-radius: 25px;
+  border: none;
+  background-color: #bbb;
 }
 
 /* Slider/range code stolen from W3Schools :) */
@@ -111,6 +149,7 @@ p.subtitle {
   opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
   -webkit-transition: .2s; /* 0.2 seconds transition on hover */
   transition: opacity .2s;
+  cursor: pointer; /* Cursor on hover */
 }
 
 /* Mouse-over effects */
@@ -125,7 +164,6 @@ p.subtitle {
   width: 20px; /* Set a specific slider handle width */
   height: 20px; /* Slider handle height */
   background: #fff; /* Green background */
-  cursor: pointer; /* Cursor on hover */
   border-radius: 50%;
 }
 
@@ -133,6 +171,6 @@ p.subtitle {
   width: 20px; /* Set a specific slider handle width */
   height: 20px; /* Slider handle height */
   background: #fff; /* Green background */
-  cursor: pointer; /* Cursor on hover */
   border-radius: 50%;
+  border: none;
 }
