--- a/style.css
+++ b/style.css
@@ -132,45 +132,49 @@ button {
   background-color: #bbb;
 }
 
-/* Slider/range code stolen from W3Schools :) */
-
 .slidecontainer {
-  width: 100%; /* Width of the outside container */
+  width: 100%;
 }
 
-/* The slider itself */
 .slider {
-  -webkit-appearance: none;  /* Override default CSS styles */
+  -webkit-appearance: none;
   appearance: none;
-  width: 100%; /* Full-width */
-  height: 2px; /* Specified height */
-  background: var(--accent); /* Grey background */
-  outline: none; /* Remove outline */
-  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  width: 100%;
+  height: 2px;
+  background: var(--accent);
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s; 
   transition: opacity .2s;
-  cursor: pointer; /* Cursor on hover */
+  cursor: pointer;
 }
 
-/* Mouse-over effects */
 .slider:hover {
-  opacity: 1; /* Fully shown on mouse-over */
+  opacity: 1;
 }
 
-/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider:disabled {
+  background:  #888;
+  cursor: default;
+}
+
+.slider:disabled:hover {
+  opacity: 0.7;
+}
+
 .slider::-webkit-slider-thumb {
-  -webkit-appearance: none; /* Override default look */
+  -webkit-appearance: none;
   appearance: none;
-  width: 20px; /* Set a specific slider handle width */
-  height: 20px; /* Slider handle height */
-  background: #fff; /* Green background */
+  width: 20px;
+  height: 20px;
+  background: #fff;
   border-radius: 50%;
 }
 
 .slider::-moz-range-thumb {
-  width: 20px; /* Set a specific slider handle width */
-  height: 20px; /* Slider handle height */
-  background: #fff; /* Green background */
+  width: 20px;
+  height: 20px;
+  background: #fff;
   border-radius: 50%;
   border: none;
 }
