--- a/static/style.css
+++ b/static/style.css
@@ -51,24 +51,32 @@ body {
   left: 15px;
 }
 
-.nav a {
+.nav-button {
   background-color: var(--accent);
   padding: 5px 10px;
   color: #fff;
   text-decoration: none;
   font-weight: 700;
+  border-radius: 5px;
 }
 
-a {
-  display: inline-block;
-}
-
-.nav a:first-child {
+/* .nav-button:first-child {
   border-radius: 5px 0 0 5px;
 }
 
-.nav a:last-child {
+.nav-button:last-child {
   border-radius: 0 5px 5px 0;
+} */
+
+label {
+  cursor: pointer;
+}
+
+input[type=file] {
+  /* opacity: 0;
+  position: absolute;
+  z-index: -1; */
+  display: none;
 }
 
 .image-wrapper {
