--- a/static/style.css
+++ b/static/style.css
@@ -19,11 +19,51 @@
   src: url("/font/Inter.var.woff2?v=3.13") format("woff2");
 }
 
+.grid-left {
+  -webkit-animation: fadein 0.5s ease; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 0.5s ease; /* Firefox < 16 */
+      -ms-animation: fadein 0.5s ease; /* Internet Explorer */
+       -o-animation: fadein 0.5s ease; /* Opera < 12.1 */
+          animation: fadein 0.5s ease;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
 body {
   margin: 0;
   box-sizing: border-box;
   font-family: "Inter";
   color: #fff;
+  background-color: #101010;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.upload {
+  background-color: #101010;
 }
 
 .grid {
@@ -33,50 +73,50 @@ body {
 }
 
 .grid-left {
-  background-color: #000;
+  /* background-color: #000; */
+  z-index: 0;
 }
 
 .grid-right {
-  background-color: #202020;
+  /* background-color: #151515; */
   height: 100vh;
   display: flex;
   flex-direction: column;
+  z-index: 1;
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
+
+@-moz-document url-prefix(){
+  .grid-right {
+    background-color: rgb(21, 21, 21, 0.9);
+  }
+  .controls-header {
+    background-color: rgba(5, 5, 5, 0.5);
+  }
+}
+
 
 .nav {
-  background-color: #bbb;
-  border-radius: 5px;
   position: absolute;
-  top: 20px;
+  top: 25px;
   left: 15px;
-}
-
-.nav-button {
-  background-color: var(--accent);
-  padding: 5px 10px;
-  color: #fff;
-  text-decoration: none;
-  font-weight: 700;
-  border-radius: 5px;
-}
-
-/* .nav-button:first-child {
-  border-radius: 5px 0 0 5px;
-}
-
-.nav-button:last-child {
-  border-radius: 0 5px 5px 0;
-} */
-
-label {
-  cursor: pointer;
+  z-index: 10;
 }
 
 input[type=file] {
   /* opacity: 0;
   position: absolute;
   z-index: -1; */
-  display: none;
+  /* display: none; */
+}
+
+.form {
+  display: flex;
+  height: 100%;
+}
+
+form {
+  margin: auto;
 }
 
 .image-wrapper {
@@ -87,18 +127,48 @@ input[type=file] {
 }
 
 .image {
+  margin-left: 2.5%;
   max-width: 95%;
   max-height: 95vh;
+  transition: transform 0.2s ease;
+  cursor: zoom-in;
+}
+
+label {
+  margin: auto;
+}
+
+input[type=checkbox] {
+  display: none;
+}
+
+input[type=checkbox]:checked ~ label > img {
+  transform: scale(2);
+  cursor: zoom-out;
+}
+
+.processing {
+  background-color: #333;
+  padding: 25px;
+  border-radius: 5px;
+  position: absolute;
+  display: flex;
+  opacity: 0;
+  z-index: 10;
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  transition: opacity 0.5s ease;
 }
 
 .controls-header {
-  background-color: #101010;
+  /* background-color: #050505; */
   padding: 15px;
+  backdrop-filter: blur(10px) saturate(100%) contrast(45%) brightness(20%);
 }
 
 .controls-wrapper {
   padding: 15px;
   overflow-y: auto;
+  backdrop-filter: blur(10px) saturate(100%) contrast(45%) brightness(40%);
 }
 
 .controls-section {
@@ -112,6 +182,10 @@ input[type=file] {
 
 h1, h2, h3, p {
   margin: 0;
+}
+
+h1 {
+  display: inline;
 }
 
 h3 {
@@ -134,15 +208,38 @@ p.subtitle {
 }
 
 hr {
-  margin: 30px 20px 20px 20px;
+  margin: 50px 20px 40px 20px;
   border: solid 1px #333;
 }
 
-button {
-  padding: 5px 10px;
-  border-radius: 25px;
+.button {
+  background-color: var(--accent);
+  padding: 10px;
+  font-weight: 700;
+  border-radius: 5px;
   border: none;
-  background-color: #bbb;
+  cursor: pointer;
+  color: #fff;
+  text-decoration: none;
+  transition: filter 0.2s ease;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.button:hover {
+  filter: brightness(1.25);
+}
+
+#buttonProcess {
+  margin-left: 10px;
+}
+
+#buttonRevert {
+  background-color: #b71c1c;
+}
+
+.controls-header {
+  display: flex;
+  justify-content: space-between;
 }
 
 .slidecontainer {
@@ -151,9 +248,10 @@ button {
 
 .slider {
   -webkit-appearance: none;
+  margin-top: 15px;
   appearance: none;
   width: 100%;
-  height: 2px;
+  height: 3px;
   background: var(--accent);
   outline: none;
   opacity: 0.7;
