--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
         <h2 class="no-top-margin">Getting Started</h2>
         <p class="subtitle">Make some changes, then click "Update" to see the results. If you don't like it, click "Revert" to delete all changes.</p>
         <br>
-        <p class="subtitle">All actions are additive i.e. increasing brightness by 50% then doing 60% will not increase it by 10%</p>
+        <p class="subtitle">All actions are additive i.e. increasing brightness by 49% then 51% is the same as doig 100%.</p>
         <br>
         <p class="subtitle">If you don't change a value between pressing "Update", then changes aren't calculated.</p>
         <br>
