--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
 <html>
 
 <head>
-  <title>AIE</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Astrophotography image enhancement honours project">
+  <title>Astrophotography Image Enhancement</title>
   <link rel="stylesheet" type="text/css" href="/static/style.css" media="screen" />
 </head>
 
