--- a/templates/upload.html
+++ b/templates/upload.html
@@ -27,6 +27,7 @@
       <img src="/static/images/stack.svg" id="uploads-img" alt="">
       <h1 class="margin-top">Stack images</h1>
       <p>Automatically align and stack multiple images</p>
+      <p>(more images = more time to stack)</p>
       <div class="custom-file">
         <input type="file" class="button" name="image" id="image" multiple="" accept="image/jpeg">
       </div>
