Fixed explanation text being wrong

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,6 @@
           <input type="hidden" name="revert" value="{{revert}}" id="revert">
           <div class="controls-section">
             <h2 class="no-top-margin">Basic Adjustments</h2>
-            <p class="subtitle">Some text explaining what the following settings do</p>
 
             <h3>Brightness &middot; <span id="spanBrightness">{{brightness}}%</span></h3>
             <div class="slidecontainer">
@@ -79,7 +78,7 @@
 
           <div class="controls-section">
             <h2>Star Enhancement</h2>
-            <p class="subtitle">Detects stars in the image and increases their brightness</p>
+            <p class="subtitle">Increases the brightness of bright objects</p>
 
             <h3>Enhancement Strength &middot; <span id="spanStar">{{enhance}}</span></h3>
             <div class="slidecontainer">
